# C-Playground

./: README.md
AddressBookMS/: CMakeLists.txt  main.cpp
ComputerRoomRS/: CMakeLists.txt  main.cpp
ComputerRoomRS/Admin/: Admin.cpp  Admin.h
ComputerRoomRS/Header/: ComputerRoom.h  Global.h  Identity.h  Time.h
ComputerRoomRS/Management/: Management.cpp  Management.h
ComputerRoomRS/Order/: Order.cpp  Order.h
ComputerRoomRS/Student/: Student.cpp  Student.h
ComputerRoomRS/Teacher/: Teacher.cpp  Teacher.h
SpeechMS/: CMakeLists.txt  Competitor.h  SpeakerManager.cpp  SpeakerManager.h  main.cpp
StaffMS/: CMakeLists.txt  main.cpp
StaffMS/Header/: Boss.h  Employee.h  Manager.h  Worker.h  WorkerManagement.h
StaffMS/Source/: Boss.cpp  Employee.cpp  Manager.cpp  WorkerManagement.cpp
